# opensubs

./: .gitignore  Cargo.toml  README.md
examples/: blocking.rs  download_sub.rs  simple.rs
src/: lib.rs  main.rs  subtitle.rs
src/client/: blocking.rs  default.rs  mod.rs  parameter.rs
src/core/: model.rs  response.rs
src/filters/: mod.rs
