[package]
name = "opensubs"
version = "0.1.3"
edition = "2024"
description = "Library to search subtitles from opensubtitles.org"
authors = ["Javier Orfo <javierorfo@protonmail.com>"]
license = "MIT"
repository = "https://github.com/javiorfo/opensubs"
homepage = "https://github.com/javiorfo/opensubs#readme"
keywords = ["subtitles", "opensubtitles", "subtitle-finder"]

[lib]
name = "opensubs"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.20", features = ["blocking"], optional = true }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"], optional = true }
scraper = "0.23.1"
thiserror = "2.0.12"
regex = "1.11.1"

[features]
default = ["async"]
async = ["reqwest", "tokio"]
blocking = ["reqwest"]

[[example]]
name = "simple"

[[example]]
name = "blocking"
required-features = ["blocking"]

[[example]]
name = "download_sub"
